--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "description": "My personal blog.",
   "scripts": {
-    "start": "vite public",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "vite public"
   },
   "repository": {
     "type": "git",
